# VespaG

./: .gitignore  .pre-commit-config.yaml  .safety-policy.yml  README.md  dvc.yaml  environment.yml  export_fnn_to_onnx.ipynb  gemme_scores.csv  hubconf.py  noxfile.py  params.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  vespag_scores.csv
.github/workflows/: run_tests.yml
data/: ProteinGym87.fasta
data/example/: example.fasta
data/output/: TCRG1_MOUSE_Tsuboyama_2023_1E0L.csv
data/score_transformation/: sorted_gemme_scores.csv  vespag_scores.csv  vespag_scores_prott5.csv
data/test/: MaveHum20.fasta  MegaScale329.fasta  mega_denovo_146_sequences.fasta  proteingym_217.fasta
data/train/: droso4k.fasta  ecoli2k.fasta  hum5k.fasta  seq_all9k.fasta  seq_droso4k.fasta  seq_ecoli2k.fasta  seq_human5k.fasta  seq_virus1k.fasta  virus1k.fasta  virus2k.fasta
model_weights/v2/: prott5.pt
onnx_models/: fnn.onnx
output_fnn/: vespag_scores_all_onnx.csv
src/vespa2/: utils.py
src/vespa2/data/embeddings/: merge_esm2_embeddings.py
src/vespa2/data/gemme/: preprocess_gemme_annotations.py
src/vespa2/data/maves/: fetch_pparg_scores.py
src/vespa2/eval/: eval_alphams_maves.py  eval_mega_dataset.py  eval_mega_dataset_v1_rasp.py  eval_proteingym.py  eval_proteingym_singlesite_landscape.py  eval_proteingym_singlesite_mutational_landscape.py  eval_validation.py  eval_validation_baseline.py  plots_proteingym.py
src/vespa2/models/: __init__.py  cnn.py  fnn.py
src/vespa2/runner/: predict.py  type_hinting.py  utils.py
src/vespa2/training/: dataset.py  train.py  trainer.py
src/vespag/: style.py  utils.py
src/vespag/data/: embeddings.py
src/vespag/eval/: eval_alphams_maves.py  eval_mega_dataset.py  eval_proteingym.py  eval_proteingym_singlesite_landscape.py  eval_proteingym_singlesite_mutational_landscape.py  eval_validation.py  eval_validation_baseline.py  plots_proteingym.py
src/vespag/models/: cnn.py  fnn.py  utils.py
src/vespag/runner/: embeddings.py  generate_embeddings.py  mutations.py  predict.py  type_hinting.py  utils.py
src/vespag/training/: dataset.py  train.py  trainer.py
tests/: conftest.py
tests/integration_tests/: conftest.py  test_workflows.py
tests/test_data/: esm2_embeddings.h5  prott5_embeddings.h5  seq1.csv  seq2.csv  test.fasta
tests/test_data/dms_scores/: dms_scores.csv  raw_vespag_scores_prott5.csv
tests/test_data/scores/: raw_vespag_scores.csv
tests/test_data/scores_esm2/: seq1.csv  seq2.csv
tests/test_data/scores_prott5/: seq1.csv  seq2.csv
tests/unit_tests/utils/: test_utils.py
vespag/: __main__.py
vespag/data/: embeddings.py  gemme.py
vespag/eval/: eval.py
vespag/models/: __init__.py  cnn.py  fnn.py  utils.py
vespag/predict/: __init__.py  predict.py
vespag/runner/: predict.py
vespag/training/: dataset.py  train.py  trainer.py
vespag/utils/: __init__.py  eval.py  generate_mutations.py  mutations.py  proteingym.py  style.py  type_hinting.py  utils.py
vespag/utils/plotting/: __init__.py  seaborn_plotting.py  style.py  utils.py
