[tool.poetry]
name = "vespag"
version = "0.1.0"
description = "Accurate and blazingly fast protein fitness prediction using protein language models"
authors = ["Julius Schlensok <julius@schlensok.org>"]
license = "GPL-3.0"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.10"

biopython = "1.83"
dvc = "3.52.0"
h5py = "3.11.0"
jaxtyping = "^0.2.28"
matplotlib = "3.8.4"
MKL = {markers = "sys_platform != 'darwin'", version = "2024.0"}
numpy = "1.26.4"
pandas = "2.2.2"
polars = "0.20.21"
rich = "13.7.1"
seaborn = "0.13.2"
sentencepiece = "^0.2.0"
torch = "^2.6.0"
tqdm = "^4.66.2"
typer = "^0.15.1"
transformers = "^4.40.1"
wandb = "0.19.6"
pingouin = "^0.5.5"
types-pyyaml = "^6.0.12.20241230"
types-tqdm = "^4.67.0.20241221"
types-seaborn = "^0.13.2.20250111"

[tool.poetry.group.dev.dependencies]
bandit = "^1.8.2"
mypy = "^1.15.0"
nox = "^2024.10.9"
nox-poetry = "^1.1.0"
pre-commit = "^4.1.0"
pre-commit-hooks = "^5.0.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.9.4"
safety = "^3.2.14"
typeguard = "^4.4.1"

[tools.poetry.group.dev]
optional = true

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "."

[tool.coverage.paths]
source = ["vespag", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["vespag"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:"
]

[tool.ruff]
include = [
    "*.py",
    "pyproject.toml",
    "README.md",
]

line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["C4", "I", "UP", "YTT", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
